name:           pretty-show
version:        1.2
category:       Text

synopsis:       Tools for working with derived Show instances.
description:
  We provide a library and an executable for working with derived 'Show'
  instances. By using the library, we can parse derived 'Show' instances into a
  generic data structure. The @ppsh@ tool uses the library to produce
  human-readable versions of 'Show' instances, which can be quite handy for
  debugging Haskell programs.

license:        BSD3
license-file:   LICENSE
author:         Iavor S. Diatchki
maintainer:     iavor.diatchki@gmail.com

homepage:       http://wiki.github.com/yav/pretty-show

cabal-version:  >= 1.8
build-type:     Simple

library
  exposed-modules:
    Text.Show.Pretty
  other-modules:
    Text.Show.Parser
    Text.Show.Value
    Text.Show.PrettyVal
  build-depends:
    array          >= 0.2  &&  < 2,
    base           >= 3    &&  < 5,
    haskell-lexer  >= 1    &&  < 2,
    pretty         >= 1    &&  < 2
  ghc-options: -Wall

  source-repository head
    type:     git
    location: git://github.com/yav/pretty-show.git


executable ppsh
  main-is: ppsh.hs

  build-depends:
    base           >= 3    &&  < 5,
    array          >= 0.2  &&  < 2,
    haskell-lexer  >= 1    &&  < 2,
    pretty         >= 1    &&  < 2,
    pretty-show
  ghc-options: -Wall

  source-repository head
    type:     git
    location: git://github.com/yav/pretty-show.git
